Various Bugfixes. Changed RestService to return null when the respose wasn't a success instead of throwing an exception.

--- a/TFG_Projects_APP_Frontend/Pages/ProjectManagementPage.xaml
+++ b/TFG_Projects_APP_Frontend/Pages/ProjectManagementPage.xaml
@@ -120,7 +120,7 @@
 
                 <StackLayout IsVisible="{Binding IsLookingForUser}" Orientation="Horizontal">
                     <Entry Placeholder="Search user by email" Text="{Binding AdduserEmail, Mode=TwoWay}" />
-                    <Button Command="{Binding AddUserToProjectCommand}" Text="Search" />
+                    <Button Command="{Binding AddUserToProjectCommand}" Text="Add user" />
                 </StackLayout>
 
                 <CollectionView
