--- a/TFG_Projects_APP_Frontend/Components/ConceptComponents/ConceptBoardComponent.xaml
+++ b/TFG_Projects_APP_Frontend/Components/ConceptComponents/ConceptBoardComponent.xaml
@@ -3,10 +3,13 @@
     x:Class="TFG_Projects_APP_Frontend.Components.ConceptComponents.ConceptBoardComponent"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
-    <Border>
+    <Border Padding="10" BackgroundColor="DarkGrey">
         <Border.StrokeShape>
             <RoundRectangle CornerRadius="16" />
         </Border.StrokeShape>
-        <Label FontSize="Large" Text="{Binding Title}" />
+        <Label
+            FontAttributes="Bold"
+            FontSize="Medium"
+            Text="{Binding Component.Title}" />
     </Border>
 </ContentView>
