--- a/TFG_Projects_APP_Frontend/Pages/LoginPage.xaml
+++ b/TFG_Projects_APP_Frontend/Pages/LoginPage.xaml
@@ -26,7 +26,7 @@
                 HorizontalOptions="Center"
                 Text="Welcome!" />
 
-            <Button Command="{Binding DebugLoginCommand}" Text="Debug Login" />
+            <Button Command="{Binding DirectLoginCommand}" Text="Debug Login" />
 
             <HorizontalStackLayout Spacing="10">
                 <Entry
@@ -95,6 +95,15 @@
                 IsPassword="True"
                 Placeholder="Password"
                 Text="{Binding Password, Mode=TwoWay}" />
+
+            <HorizontalStackLayout Spacing="-13" VerticalOptions="Center">
+                <CheckBox IsChecked="{Binding RememberMe}" VerticalOptions="Center" />
+                <Label
+                    FontSize="14"
+                    Text="Remember me"
+                    TextColor="Black"
+                    VerticalOptions="Center" />
+            </HorizontalStackLayout>
 
             <Button
                 Padding="10"
