Task Section Component done. Task and TaskProgress components created but not implemented.

--- a/TFG_Projects_APP_Frontend/Pages/Tasks/TaskBoardPage.xaml
+++ b/TFG_Projects_APP_Frontend/Pages/Tasks/TaskBoardPage.xaml
@@ -3,6 +3,7 @@
     x:Class="TFG_Projects_APP_Frontend.Pages.Tasks.TaskBoardPage"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:components="clr-namespace:TFG_Projects_APP_Frontend.Components.TaskComponents"
     xmlns:dtos="clr-namespace:TFG_Projects_APP_Frontend.Entities.Dtos.Users"
     xmlns:models="clr-namespace:TFG_Projects_APP_Frontend.Entities.Models"
     xmlns:pageModels="clr-namespace:TFG_Projects_APP_Frontend.PageModels"
@@ -21,6 +22,7 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
+
         <StackLayout Grid.Row="0" Orientation="Horizontal">
             <Button
                 Command="{Binding CreateTaskSectionCommand}"
@@ -41,7 +43,8 @@
             Grid.Row="1"
             Padding="5"
             Orientation="Horizontal"
-            Spacing="20">
+            Spacing="20"
+            VerticalOptions="FillAndExpand">
             <CollectionView
                 HorizontalOptions="StartAndExpand"
                 ItemsSource="{Binding TaskSections}"
@@ -53,63 +56,17 @@
                 </CollectionView.ItemsLayout>
                 <CollectionView.ItemTemplate>
                     <DataTemplate x:DataType="models:TaskSection">
-                        <Border Padding="5">
-                            <StackLayout Spacing="5">
-                                <StackLayout Orientation="Horizontal" Spacing="5">
-                                    <Button
-                                        Command="{Binding Source={RelativeSource AncestorType={x:Type pageModels:Tasks.TaskBoardPageModel}}, Path=MoveSectionLeftCommand}"
-                                        CommandParameter="{Binding .}"
-                                        Text="&lt;" />
-                                    <Label Text="{Binding Title}" />
-                                    <Button
-                                        Command="{Binding Source={RelativeSource AncestorType={x:Type pageModels:Tasks.TaskBoardPageModel}}, Path=MoveSectionRightCommand}"
-                                        CommandParameter="{Binding .}"
-                                        Text="&gt;" />
-                                </StackLayout>
-                                <Button
-                                    Command="{Binding Source={RelativeSource AncestorType={x:Type pageModels:Tasks.TaskBoardPageModel}}, Path=EditTaskSectionCommand}"
-                                    CommandParameter="{Binding .}"
-                                    Text="Edit" />
-                                <Button
-                                    Command="{Binding Source={RelativeSource AncestorType={x:Type pageModels:Tasks.TaskBoardPageModel}}, Path=DeleteTaskSectionCommand}"
-                                    CommandParameter="{Binding .}"
-                                    Text="Delete" />
-                                <Button
-                                    Command="{Binding Source={RelativeSource AncestorType={x:Type pageModels:Tasks.TaskBoardPageModel}}, Path=TaskCreateCommand}"
-                                    CommandParameter="{Binding .}"
-                                    Text="Create Task" />
-                                <ListView ItemsSource="{Binding Tasks}">
-                                    <ListView.ItemTemplate>
-                                        <DataTemplate x:DataType="models:ProjectTask">
-                                            <ViewCell>
-                                                <Border
-                                                    Margin="5"
-                                                    Padding="10"
-                                                    BackgroundColor="#f0f0f0">
-                                                    <StackLayout Spacing="5">
-                                                        <Label Text="{Binding Title}" />
-                                                        <Label Text="{Binding Description}" />
-                                                        <Label Text="{Binding Progress, StringFormat='Progress: {0:F0}'}" />
-                                                        <Label Text="{Binding LimitDate, StringFormat='Limit Date: {0:dd/MM/yyyy}'}" />
-                                                        <Label Text="{Binding UserAssigned.Username, StringFormat='Assigned to: {0}'}" />
-                                                        <Label Text="{Binding Priority.Name, StringFormat='Priority: {0}'}" />
-                                                        <Label Text="{Binding CompletionDate}" />
-                                                        <Button
-                                                            Command="{Binding Source={RelativeSource AncestorType={x:Type pageModels:Tasks.TaskBoardPageModel}}, Path=EditTaskCommand}"
-                                                            CommandParameter="{Binding .}"
-                                                            Text="Edit Task" />
-                                                        <Button
-                                                            Command="{Binding Source={RelativeSource AncestorType={x:Type pageModels:Tasks.TaskBoardPageModel}}, Path=DeleteTaskCommand}"
-                                                            CommandParameter="{Binding .}"
-                                                            Text="Delete Task" />
-                                                    </StackLayout>
-                                                </Border>
-                                            </ViewCell>
-                                        </DataTemplate>
-                                    </ListView.ItemTemplate>
-                                </ListView>
-                            </StackLayout>
-                        </Border>
+                        <components:TaskSectionComponent
+                            ChildDragEndCommand="{Binding Source={RelativeSource AncestorType={x:Type pageModels:Tasks.TaskBoardPageModel}}, Path=TaskDragEndCommand}"
+                            ChildTapCommand="{Binding Source={RelativeSource AncestorType={x:Type pageModels:Tasks.TaskBoardPageModel}}, Path=EditTaskCommand}"
+                            CreateTaskCommand="{Binding Source={RelativeSource AncestorType={x:Type pageModels:Tasks.TaskBoardPageModel}}, Path=TaskCreateCommand}"
+                            DeleteCommand="{Binding Source={RelativeSource AncestorType={x:Type pageModels:Tasks.TaskBoardPageModel}}, Path=DeleteTaskSectionCommand}"
+                            EditCommand="{Binding Source={RelativeSource AncestorType={x:Type pageModels:Tasks.TaskBoardPageModel}}, Path=EditTaskSectionCommand}"
+                            HoverEnterCommand="{Binding Source={RelativeSource AncestorType={x:Type pageModels:Tasks.TaskBoardPageModel}}, Path=HoverEnterCommand}"
+                            HoverExitCommand="{Binding Source={RelativeSource AncestorType={x:Type pageModels:Tasks.TaskBoardPageModel}}, Path=HoverExitCommand}"
+                            MoveLeftCommand="{Binding Source={RelativeSource AncestorType={x:Type pageModels:Tasks.TaskBoardPageModel}}, Path=MoveSectionLeftCommand}"
+                            MoveRightCommand="{Binding Source={RelativeSource AncestorType={x:Type pageModels:Tasks.TaskBoardPageModel}}, Path=MoveSectionRightCommand}"
+                            Section="{Binding .}" />
                     </DataTemplate>
                 </CollectionView.ItemTemplate>
             </CollectionView>
