--- a/TFG_Projects_APP_Frontend/Components/TaskComponents/TaskSectionComponent.xaml
+++ b/TFG_Projects_APP_Frontend/Components/TaskComponents/TaskSectionComponent.xaml
@@ -8,25 +8,43 @@
     x:DataType="components:TaskSectionComponent">
     <VerticalStackLayout>
         <Border Padding="5">
-            <StackLayout Spacing="5">
-                <StackLayout Orientation="Horizontal" Spacing="5">
+            <Border.GestureRecognizers>
+                <DropGestureRecognizer AllowDrop="True" Drop="OnDrop" />
+            </Border.GestureRecognizers>
+
+            <Grid RowSpacing="10">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
+
+                <StackLayout
+                    Grid.Row="0"
+                    Orientation="Horizontal"
+                    Spacing="5">
                     <Button Clicked="Left_Clicked" Text="&lt;" />
                     <Label Text="{Binding Section.Title}" />
                     <Button Clicked="Right_Clicked" Text="&gt;" />
                 </StackLayout>
-                <Button Clicked="Edit_Clicked" Text="Edit" />
-                <Button Clicked="Delete_Clicked" Text="Delete" />
-                <Button Clicked="Create_Task_Clicked" Text="Create Task" />
-                <ListView ItemsSource="{Binding Section.Tasks}">
-                    <ListView.ItemTemplate>
-                        <DataTemplate x:DataType="models:ProjectTask">
-                            <AbsoluteLayout>
-                                <components:TaskComponent />
-                            </AbsoluteLayout>
-                        </DataTemplate>
-                    </ListView.ItemTemplate>
-                </ListView>
-            </StackLayout>
+                <Button
+                    Grid.Row="1"
+                    Clicked="Edit_Clicked"
+                    Text="Edit" />
+                <Button
+                    Grid.Row="2"
+                    Clicked="Delete_Clicked"
+                    Text="Delete" />
+                <Button
+                    Grid.Row="3"
+                    Clicked="Create_Task_Clicked"
+                    Text="Create Task" />
+                <ScrollView Grid.Row="4">
+                    <StackLayout x:Name="TaskContainer" Padding="10" />
+                </ScrollView>
+            </Grid>
         </Border>
     </VerticalStackLayout>
 </ContentView>
