--- a/TFG_Projects_APP_Frontend/Components/TaskComponents/TaskComponent.xaml
+++ b/TFG_Projects_APP_Frontend/Components/TaskComponents/TaskComponent.xaml
@@ -11,10 +11,8 @@
         Padding="10"
         BackgroundColor="#f0f0f0">
         <Border.GestureRecognizers>
-            <DragGestureRecognizer
-                CanDrag="True"
-                DragStarting="OnDragStarting"
-                DropCompleted="OnDropCompleted" />
+            <DragGestureRecognizer CanDrag="True" DragStarting="OnTaskGrabbed" />
+            <DropGestureRecognizer AllowDrop="True" Drop="OnDroppedOnTask" />
         </Border.GestureRecognizers>
         <StackLayout Spacing="5">
             <Label Text="{Binding ComponentTask.Title}" />
