--- a/TFG_Projects_APP_Frontend/Components/TaskComponents/ProgressSectionComponent.xaml
+++ b/TFG_Projects_APP_Frontend/Components/TaskComponents/ProgressSectionComponent.xaml
@@ -1,11 +1,58 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="TFG_Projects_APP_Frontend.Components.TaskComponents.ProgressSectionComponent">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+<ContentView
+    x:Class="TFG_Projects_APP_Frontend.Components.TaskComponents.ProgressSectionComponent"
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
+    <Border Padding="5">
+        <Grid RowSpacing="10">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <StackLayout
+                Grid.Row="0"
+                Orientation="Horizontal"
+                Spacing="5">
+                <Button Clicked="Left_Clicked" Text="&lt;" />
+                <Label Text="{Binding Title}" />
+                <Button Clicked="Right_Clicked" Text="&gt;" />
+            </StackLayout>
+            <Button
+                Grid.Row="1"
+                Clicked="Edit_Clicked"
+                Text="Edit" />
+            <Button
+                Grid.Row="2"
+                Clicked="Delete_Clicked"
+                Text="Delete" />
+            <Button
+                Grid.Row="3"
+                Clicked="Create_Task_Clicked"
+                Text="Create Task" />
+            <Border
+                Grid.Row="4"
+                Padding="10"
+                StrokeShape="RoundRectangle 40,0,0,40">
+                <Border.GestureRecognizers>
+                    <DropGestureRecognizer AllowDrop="True" Drop="DroppedOnProgress" />
+                </Border.GestureRecognizers>
+                <Label
+                    x:Name="DropZone"
+                    HorizontalOptions="Center"
+                    Text="Drop Here" />
+            </Border>
+            <ScrollView Grid.Row="5">
+                <StackLayout
+                    x:Name="TaskContainer"
+                    Padding="10"
+                    BackgroundColor="Transparent"
+                    IsClippedToBounds="True"
+                    Spacing="10" />
+            </ScrollView>
+        </Grid>
+    </Border>
 </ContentView>
