--- a/TFG_Projects_APP_Frontend/Pages/Tasks/TaskBoardPage.xaml
+++ b/TFG_Projects_APP_Frontend/Pages/Tasks/TaskBoardPage.xaml
@@ -23,6 +23,7 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
+
         <StackLayout Grid.Row="0" Orientation="Horizontal">
             <Button
                 Command="{Binding CreateTaskSectionCommand}"
@@ -42,7 +43,7 @@
         <StackLayout
             Grid.Row="1"
             Padding="5"
-            HorizontalOptions="FillAndExpand"
+            HorizontalOptions="StartAndExpand"
             Orientation="Horizontal"
             Spacing="20">
             <CollectionView
